# teams-transcriber

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml  teams_transcriber.spec
docs/superpowers/checklists/: 2026-05-15-phase-2-manual-verification.md  2026-05-15-phase-3-manual-verification.md  2026-05-15-phase-4-verification.md  2026-05-18-phase-5-verification.md  2026-05-19-phase-6-verification.md  2026-05-19-phase-7-verification.md
docs/superpowers/notes/: 2026-05-15-phase-2-known-issues.md
docs/superpowers/plans/: 2026-05-14-phase-1-foundation.md  2026-05-14-phase-2-pipeline.md  2026-05-15-phase-2.5-real-audio.md  2026-05-15-phase-3-ui.md  2026-05-15-phase-4-packaging.md  2026-05-18-phase-5-live-workspace.md  2026-05-19-phase-6-detection-audio-selection.md  2026-05-19-phase-7-decoupled-gpu-runtime.md  (+7 more)
installer/: teams-transcriber.iss
scripts/: build_installer.py  setup_new_machine.ps1
src/teams_transcriber/: __init__.py  __main__.py  autolaunch.py  chat.py  cli.py  config.py  events.py  live_transcriber.py  meeting_watcher.py  paths.py  pipeline.py  recorder.py  summarizer.py  summary_export.py  transcriber.py  transcript_importer.py  update_checker.py
tests/: conftest.py  test_autolaunch.py  test_chat.py  test_cli.py  test_config.py  test_events.py  test_finalize_or_recover.py  test_hotkeys.py  test_live_transcriber.py  test_meeting_watcher.py  test_phase6_pipeline.py  test_pipeline.py  test_pipeline_defer.py  test_recorder.py  test_summarizer.py  test_summary_export.py  test_transcriber.py  test_transcript_importer.py  test_update_checker.py
tests/audio/: test_devices.py  test_importer.py  test_opus_writer.py  test_source.py  test_splitter.py  test_wasapi_sessions.py
tests/integrations/: test_wrike_assignees.py  test_wrike_client.py  test_wrike_client_comments.py  test_wrike_items.py  test_wrike_sync.py  test_wrike_sync_items.py
tests/phone_sync/: test_contract.py  test_library_export.py  test_sync.py  test_transport.py
tests/runtime/: test_gpu_runtime.py
tests/storage/: test_chat_repo.py  test_db.py  test_lifecycle.py  test_migrations.py  test_paths.py  test_phone_imports.py  test_recordings.py  test_retention.py  test_schema_v4_migration.py  test_schema_v5_migration.py  test_summaries.py  test_todos.py  test_transcripts.py  test_wrike_repos.py  test_wrike_schema_v6.py
tests/ui/: conftest.py  test_active_recording_banner.py  test_app_chat_wiring.py  test_app_defer.py  test_app_export.py  test_app_hotkey_marshal.py  test_app_refresh_history.py  test_app_wrike_close_loop.py  test_app_wrike_pending.py  test_app_wrike_wiring.py  test_button_clipping.py  test_chat_card.py  test_confirm_dialog.py  test_first_run_wizard.py  test_frameless.py  test_history_list.py  test_icons.py  test_labels.py  test_live_transcript_view.py  test_main_window.py  test_master_todo_view.py  test_meeting_card.py  test_notes_editor.py  test_pdf_export.py  test_qt_bridge.py  test_scrim.py  test_search_bar.py  test_settings_dialog.py  test_settings_integrations_tab.py  test_sidebar.py  test_summary_pane.py  test_theme.py  test_toast_banner.py  test_transcript_view.py  test_transcript_window.py  test_tray.py  test_update_dialog.py  test_window_state.py  test_workspace_window.py  test_wrike_folder_picker.py  (+2 more)
(+85 files in other folders)
