[project]
name = "teams-transcriber"
version = "0.1.0"
description = "Auto-record, transcribe, and summarize Microsoft Teams meetings on Windows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brian Lewis" }]

# Phase 1 has zero runtime deps — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/teams_transcriber"]
