[project]
name = "teams-transcriber"
version = "0.1.0"
description = "Auto-record, transcribe, and summarize Microsoft Teams meetings on Windows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brian Lewis" }]

dependencies = [
    "pywin32>=306",
    "psutil>=5.9",
    "soundcard>=0.4.3",
    "av>=12.0",
    "faster-whisper>=1.0",
    "anthropic>=0.40",
    "numpy>=1.26",
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pywin32",
    "types-psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/teams_transcriber"]

[[tool.mypy.overrides]]
module = ["soundcard.*"]
ignore_missing_imports = true
