[project]
name = "teams-transcriber"
version = "0.7.3"
description = "Auto-record, transcribe, and summarize Microsoft Teams meetings on Windows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brian Lewis" }]

dependencies = [
    "pywin32>=306",
    "psutil>=5.9",
    "soundcard>=0.4.3",
    "av>=12.0",
    "faster-whisper>=1.0",
    "anthropic>=0.40",
    "numpy>=1.26",
    "keyring>=24",
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cudnn-cu12>=9.0",
    "PySide6>=6.8",
    "keyboard>=0.13.5",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    "pycaw>=20231007",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pillow>=10.0",
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "types-psutil",
    "types-pywin32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/teams_transcriber"]

[[tool.mypy.overrides]]
module = [
    "soundcard.*",
    "av.*",
    "faster_whisper.*",
    "keyboard.*",
    "winsdk.*",
    "PySide6.*",
    "pytestqt.*",
]
ignore_missing_imports = true
